@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-08-16 Davide
+	* Add emfrac to Jet
+
 2013-07-30 Steve
 	* Added jetPtCut arg to Meff methods
 
